--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,17 +267,20 @@ header button{
 .html-container{
     height: 300px;
     background-color: #FFF6F4; 
-    max-width: 33%;  
+    max-width: 33%;
+    border-radius:10px ;  
 }
 .css-container{
     height: 300px;
     background-color: #F2F6FE;
-    max-width: 33%;  
+    max-width: 33%; 
+    border-radius:10px ; 
 }
 .java-container{
     height: 300px;
     max-width: 33%;
     background-color: #FFFDF2;
+    border-radius:10px ;
 }
 .html-img{
     margin-top: 30px;
